fix wrong margin on mobile search item

--- a/css/components/search_item_reveal_effect.css
+++ b/css/components/search_item_reveal_effect.css
@@ -242,7 +242,7 @@
     }
 
     .grid figcaption p {
-        margin: 0;
+        /*margin: 0;*/
         padding: 0 10px;
     }
 }
